# audard

alsa-bencol-src/: Makefile  bencol-alsa-orig-comts.c  bencol-alsa-orig-strip.c  bencol-alsa-timer.c
alsa-minivosc-src/: README
alsa-scdcomp/: README  alsa-info-MSI-10.04.txt  alsa-info-NetColors-11.04.txt  alsa-sox-notes.sh  csv-pygtk.py  ftdi-sio-duemillanove-info.txt  genbindata_sawramp_16s.pl  hexdump.pl  load-alsa-debug-modules.sh  outshark_48_audacok.csv  prepend_wav_header.pl  print_sawramp.sh  unpack-tshark.sh
alsa-scdcomp/alsa-tests/: README.alsa-capttest  README.alsa-patest-duplex  README.fix  batch_traceLogFile.sh  cappics.sh  captmini-debug-fg.gdb  collectmirq.gp  collectmirq.sh  comparecsv.pl  csv_normalize_cols.py  data_montage.tar.xz  lat-anim.pl  montikz-pdf.pl  playdelay.sh  quikgppdf.sh  rerun.sh  run-alsa-capttest.sh  run-alsa-lattest.sh  run-alsa-pa-tests.sh  run-audacity-test.sh  runner-alsa-capttest.sh  traceAdbgAcity.gp  traceFGLatLogGraph.gp  traceFGLatLogfile2Csv.py  traceFGTXLogGraph.gp  traceFGTXLogfile2Csv.py  traceLogGraph.gp  traceLogfile2Csv.py
alsa-scdcomp/ftdi_profiler/: ftdi_profiler.gp  ftdi_profiler.h  ftdi_profiler.kst  ftdi_profiler.sh  ftdi_profiler_chaco.py
alsa-scdcomp/multitrack_plot/: multitrack_plot.glade  multitrack_plot.py  multitrack_user.py  xnuplot_diff_7c71428.patch
alsa-scdcomp/snd_ftdi_audard-an16s/: Makefile  copylogs.sh  ftdi_sio-audard-16s.c  snd_ftdi_audard_16s.h  snd_ftdi_audard_16s_B.h  snd_ftdi_audard_16s_C.h
alsa-scdcomp/testjiffy/: Makefile  calcmeanstdev.py  getHZ.sh  rerun.sh  testjiffy.c  testjiffy_hr.c
alsa-scdcomp/trace-user-program/: Makefile  callmodule.c  min.S  min.c  trace-minprog.sh
attenload/: LICENSE  README  VERSION  adsparse-bitmap.pl  adsparse-dvstngs.pl  adsparse-wave.pl  adsparse-waveo.pl  attenScopeIncludes.pm  attengrab-repair.pl  attengrab.pl  attenload.c
attenload/devscripts/: adsalign_multifile.pl  adscompare.pl  adscompare_multifile.pl  adscompare_run_table.pl  allnotes_adscompare.sh  get_failed_csv.pl  get_resampled_merged_vals.pl  get_ssf.sh  gvis_csv.gnuplot  parse_tdiv_scan.pl  prep_csv_gvis.sh  usbmon2csv.pl  usbreplayprep.pl  usbsnoop2csv.pl
audard/anbrd/: analog_io_board.mod  audard_analogbrd-cache.lib  audard_analogbrd.brd  audard_analogbrd.cmp  audard_analogbrd.dcm  audard_analogbrd.lib  audard_analogbrd.lst  audard_analogbrd.net  audard_analogbrd.pro  audard_analogbrd.sch
audard/serial-loopback-test/: duplexAudard_loopback.pde
audard/snd_ftdi_audard-an8m/: Makefile  duplexAudard_an8m.pde  duplexAudard_an8m_oneloop.pde  ftdi_sio-audard.c  sio2.6.32-audard.diff  snd_ftdi_audard.h
avr-cycles/: avr-cycles  avr-cycles.c  avr.h
ccal-0.6.1/: ccal-0.6.1.py  checkMyCCals.sh  note.txt
extensions/glipper/: append.py  filter.py  filter.ui  glipper-pyosd.py
extensions/inkscape/: borderframeimage.inx  borderframeimage.py
extensions/python-markdown/: md_toc.py
mvs-client.perl/: Client.pm  mvs  mvs-notes.txt
nautilus-save-tabs/: Makefile.am  Makefile.in  NEWS  README_savetabs_log  aclocal.m4  configure  configure.in  nautilus-save-tabs.schemas.in
nautilus-save-tabs/debian/: README.Debian  changelog  control  copyright  rules  watch
nautilus-save-tabs/src/: Makefile.am  Makefile.in  libnautilus-save-tabs.la  nautilus-save-tabs.c  nautilus-save-tabs.h  save-tabs.c
numStepCsvLogVis/: README  VERSION  _cli_args.txt  makeCsvMovie.py  numStepCsvLogVis.py  sample.csv
offext-call-scripts/: podofo.sh
patches/: cpipe-3.0.1-singlebyte.patch  textmarker-jar-0.3.4sd-quoteurltext.patch
sd-phdemo/: README  audiolooper_s.pd  l2ork-gripd.patch  lbangv.pd  pdlua_sgit.patch  procPatSeq.pd_luax  procsnd.sh  run-pd-patch.sh  seqaudiorender.py  seqinterface.gpd  seqinterface_s.pd  starter_rotknob_ui.pd  ttsq_BackBuffers.pd  ttsq_SmpLd.pd  ttsq_SndSamplesMenuLoader.pd  ttsq_SoundSamples.pd  ttsq_backbufSeqEng_py.pd  ttsq_clasSqAudEngTr1_smap.pd  ttsq_clasSqAudEngTr2_pitch.pd  ttsq_classicSeqEng_lua.pd  ttsq_seqTrkMixer~.pd  ttsq_start_seqintf_ui.pd  ttsq_start_ttable_ui.pd  ttsq_ttableStepCtl.pd  ttsq_uiSetSngPatSeq.pd  turntable_audioloop.gpd  turntable_audioloop_dbl.gpd  turntable_audioloop_dbl_s.pd  turntable_audioloop_s.pd  turntable_seqinterface.gpd  turntable_seqinterface_dbl.gpd  turntable_seqinterface_dbl_s.pd  turntable_seqinterface_s.pd  wav2png_git.patch
sdfrethsh/: ArduinoWaker.pde  ardtestdhcp.pde  sdarsh-minimal-echo.pde  sdfruit.pde  sdfruiteth.pde
single-scripts/: Animating_selected_plot_elements-thread.py  Animating_selected_plot_elements.py  HelloWorld_flex.as  Makefile.mozextension2  Qt4WebKit_singleinst_stdin.py  agigrab  anim.py  anim_parse_data-pipecursethrd.py  asc2raw.c  asc2vcd.c  atextest.sh  bash-xtrace-color-commands.sh  basic-labels-veclen.gnuplot  basic-labels.gnuplot  basictest.gnuplot  batchVidConvUpl.sh  bckg-desk-tmpchange.sh  checkServerStatus.sh  check_textfile_header_commented.pl  checkcmykpages.py  checkimap.py  cmdcalc.tex  cmdl-blockdiag-fig-skencil.py  cmdline_draw_skencil_script.py  consecutive-line-search.sh  conv-to-psd.scm  cratelimit.pl  csvinfo.pl  decryptImg.sh  desk-workspace-startup.sh  dia_python.py  dircompare.sh  exifget.sh  fork-io.py  gen_bin_data.pl  getsetdtr.c  ghdl2ngspice-example.sh  gnuplot_svg_query.xsl  grab-deskcap-vid-double.sh  grabFormatLinks.pl  (+65 more)
source-build-scripts/: buildRun-SAXEcho-openoffice.sh  get-diff-pdf.sh  get-eog-src-deb-ppa.sh  get-feh-deb.sh  get-gdb-src-deb.sh  get-netsurf-curl-static.sh  get-ngspice-src-deb.sh  get-podofo-src.sh  get-remake-deb.sh  get-scite-src-deb-ppa.sh  get-simulavr-xx-src-deb.sh  getMozillaPluginFireBreath.sh
wiki2html/: Makefile  README  boolean.h  globals.h  lexer.l  output.c  output.h  test.wiki  transforms.c  transforms.h  wiki2html  wiki2html.php  yyexternals.h
xp-take-screenshot/: CaptureScreen.cs  InterceptCaptureScreen.cs  InterceptKeys.cs  TestKeybdHook.cs  build.bat
xtra/scintilla_FB/: CMakeLists.txt  FindScintilla.cmake  MScintilla.h  MScintillaX11.cpp  SciMozFB.cpp  SciMozFB.h  SciMozFBAPI.cpp  SciMozFBAPI.h  fbgen_SciMozFB.exp  getSciMozFB.sh
(+117 files in other folders)
